--- a/src/translation/translation-ar.json
+++ b/src/translation/translation-ar.json
@@ -1,41 +1,41 @@
 {
   "lang": "ar",
-  "title": "حاسبة الميراث الإسلامي",
-  "yes": "نعم",
-  "no": "لا",
-  "calculate": "احسب",
-  "close": "إغلق",
-  "heir_type": "أنواع الورثة",
-  "heir_count": "أعداد الورثة",
-  "fard": "فرض",
-  "tasib": "تعصيب",
-  "special_case": "حالة خاصة",
-  "solution": "الحل",
-  "no_heir_selected": "لم يتم اختيار وريث",
-  "share_fraction": "حصة الكسر",
-  "share_percentage": "نسبة المشاركة",
-  "share_type": "نوع المشاركة",
+  "title": "Islamic Inheritance Calculator",
+  "yes": "Yes",
+  "no": "No",
+  "calculate": "calculate",
+  "close": "close",
+  "heir_type": "Heir type",
+  "heir_count": "No. of heirs",
+  "fard": "Fard",
+  "tasib": "Tasib",
+  "special_case": "Special Case",
+  "solution": "Solution",
+  "no_heir_selected": "No heir is selected",
+  "share_fraction": "Share Fraction",
+  "share_percentage": "Share Percentage",
+  "share_type": "Share Type",
 
-  "husband": "الزوج",
-  "wife": "الزوجة",
-  "son": "الابن",
-  "daughter": "البنت",
-  "paternal_grand_son": "ابن الابن",
-  "paternal_grand_daughter": "بنت الابن",
-  "father": "الأب",
-  "mother": "الأم",
-  "paternal_grand_father": "الجد لأب",
-  "paternal_grand_mother": "الجدة لأب",
-  "maternal_grand_mother": "الجدة لأم",
-  "full_brother": "الأخ الشقيق",
-  "full_sister": "الأخت الشقيقة",
-  "paternal_brother": "الأخ لأب",
-  "paternal_sister": "الأخت لأب",
-  "maternal_sibling": "الإخوة لأم",
-  "full_nephew": "ابن الأخ الشقيق",
-  "paternal_nephew": "ابن الأخ لأب",
-  "full_paternal_uncle": "العم الشقيق",
-  "paternal_paternal_uncle": "العم لأب",
-  "full_cousin": "ابن العم الشقيق",
-  "paternal_cousin": "ابن العم لأب"
+  "husband": "Husband",
+  "wife": "Wife",
+  "son": "Son",
+  "daughter": "Daughter",
+  "paternal_grand_son": "Paternal GrandSon",
+  "paternal_grand_daughter": "Paternal GrandDaughter",
+  "father": "Father",
+  "mother": "Mother",
+  "paternal_grand_father": "Paternal GrandFather",
+  "paternal_grand_mother": "Paternal GrandMother",
+  "maternal_grand_mother": "Maternal GrandMother",
+  "full_brother": "Full Brother",
+  "full_sister": "Full Sister",
+  "paternal_sister": "Paternal Sister",
+  "paternal_brother": "Paternal Brother",
+  "maternal_sibling": "Maternal Sibling",
+  "full_nephew": "Full Nephew",
+  "paternal_nephew": "Paternal Nephew",
+  "full_paternal_uncle": "Full Paternal Uncle",
+  "paternal_paternal_uncle": "Paternal Paternal Uncle",
+  "full_cousin": "Full Cousin",
+  "paternal_cousin": "Paternal Cousin"
 }
